# smalltalk

./: .env.example  .gitignore  01-compact-semantic-episode-input.md  02-continuation-useful-output-contract.md  03-single-request-production-cutover.md  AGENTS.md  PRODUCT.md  README.md  codex.txt  package-lock.json  package.json  pnpm-lock.yaml  resp_0056a4be4033902f006a5bfb214a50819ca241ce0c2a3ec577-full-log.json  resp_05cd15c928f2b22f006a5bf31d506481a0987b22d9e16500b9-full-log.json  resp_091e71ea63ea8c2f006a56848e38a4819da32bb56371aedf2c-full-log.json  resp_091e71ea63ea8c2f006a56848e38a4819da32bb56371aedf2c-input-items.json  resp_091e71ea63ea8c2f006a56848e38a4819da32bb56371aedf2c-response.json  resp_0d1ccaabe671fd37006a5bf51ade34819ebe5fa0f01a250b8e-full-log.json  resp_0e34cbea9d0858af006a5bfb615f7c81929e12bbc2bf4b5197-full-log.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/: continue-ui-qa.md  (+18 more)
src-tauri/: .rustc_info.json  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: SessionIslandBridge.h  SessionIslandPanel.mm  SessionIslandPanel.swift
src-tauri/resources/fonts/: InstrumentSerif-OFL.txt
src-tauri/scripts/: accessibility_snapshot.swift  build_swift_sidecars.sh  capture_events.swift  image_mask.swift  prepare_tauri_build.sh  sck_screenshot.swift
src-tauri/src/: auth_callback.rs  capture.rs  cloud_auth.rs  continuation.rs  lib.rs  main.rs  session_island.rs  system_permissions.rs  workload.rs
src-tauri/src/capture/: event_pipeline.rs  fault_injection.rs  process_runner.rs  provider_health.rs  runtime_stability.rs  swift_helpers.rs
src-tauri/src/capture_core/: browser_adapter.rs  episode.rs  event_governor.rs  evidence_arbiter.rs  extractors.rs  mod.rs  privacy.rs  quality.rs  resume_dossier.rs  snapshot.rs  store.rs  workstate.rs  workstate_store.rs
src-tauri/src/continuation/: accuracy_eval.rs  accuracy_fixture.rs  activity_recap.rs  activity_recap_detours.rs  activity_recap_inputs.rs  activity_recap_integration.rs  activity_recap_model.rs  activity_recap_objective.rs  activity_recap_open_loop.rs  activity_recap_segments.rs  activity_recap_truth.rs  activity_recap_validation.rs  confidence.rs  enrichment.rs  feedback_policy.rs  history.rs  semantic_consistency.rs  task_truth_v2.rs  task_turn.rs  task_turn_evidence.rs
src-tauri/src/continuation/task_truth_v2/: audit.rs  checkpoint.rs  model.rs  observation_packet.rs  production.rs  review.rs  selection.rs  semantic_probe.rs  task_snapshot.rs  task_thread.rs  verifier.rs
src-tauri/src/session_island/: contract.rs  gateway.rs
src-tauri/tests/fixtures/continue_accuracy/: README.md  baseline-report.v1.json  eval-policy.v1.json  known-failures.v1.json  lca-06-live-runtime-replay.v1.json  lca-replay-manifest.v1.json  release-report.json
src-tauri/tests/fixtures/continue_accuracy/cases/: capture_button_adjacent_after_support_detour.json  capture_button_adjacent_before_new_task.json  capture_button_all_contaminants.json  capture_button_fresh_task_only.json  capture_button_old_completion_visible.json  capture_button_stale_inferred_feedback.json  capture_button_unrelated_open_loop.json  lca_0056_visual_cue_verification.json  lca_05cd_product_need_review.json  lca_0d1c_visual_cue_request.json  lca_0e34_unsent_regression_draft.json  task_truth_session_013_causal_control_containment.json
src-tauri/tests/fixtures/continue_accuracy/task_truth_v2/: README.md  eval-policy.v1.json  final-release-report.v1.json  manual-macos-qa.schema.v1.json  performance-cost-privacy.schema.v1.json  release-budgets.schema.v1.json  release-evaluator-report.v1.json  session-013-family.v2.json
src-tauri/tests/fixtures/continue_accuracy/task_truth_v2/model_first/: README.md  eval-policy.v1.json  final-release-report.v1.json  manual-macos-qa.schema.v1.json  performance-cost-privacy.schema.v1.json  (+3 more)
(+177 files in other folders)
