[package]
name = "smalltalk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "smalltalk"
autobins = false

[features]
default = []
eval-binaries = []

[[bin]]
name = "smalltalk"
path = "src/main.rs"

[[bin]]
name = "continue_accuracy_eval"
path = "src/bin/continue_accuracy_eval.rs"
required-features = ["eval-binaries"]

[[bin]]
name = "task_truth_v2_eval"
path = "src/bin/task_truth_v2_eval.rs"
required-features = ["eval-binaries"]

[[bin]]
name = "task_truth_v2_release_gate"
path = "src/bin/task_truth_v2_release_gate.rs"
required-features = ["eval-binaries"]

[[bin]]
name = "mfti_04_release_gate"
path = "src/bin/mfti_04_release_gate.rs"
required-features = ["eval-binaries"]

[[bin]]
name = "mfti_04_performance_report"
path = "src/bin/mfti_04_performance_report.rs"
required-features = ["eval-binaries"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smalltalk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
foreign-types = "0.5"
